<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/textView_welcome"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_anadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/textView_anadir" />

        <EditText
            android:id="@+id/editText_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_titulo" />

        <EditText
            android:id="@+id/editText_autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_autor" />

        <EditText
            android:id="@+id/editText_ano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_ano"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/textView_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_genero"
                android:paddingTop="2dp"
                android:layout_marginRight="10dp"
                android:textSize="15sp"
                />

            <Spinner
                android:id="@+id/spinner_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/spinner_genero"
                />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_noticias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:text="@string/checkBox_noticias"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_enviar"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="onClickEnviar"
            />

        <!--
                <ToggleButton
                    android:id="@+id/toggle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/off"
                    android:textOn="@string/on" />

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox1" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox2" />

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox3" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickButton"
                    android:text="@string/text_button" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        -->
    </LinearLayout>
</FrameLayout>